--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Flights#index</h1>
-<p>Find me in app/views/flights/index.html.erb</p>
+<h1>Book a flight with us!</h1>
+
+<h2>Search for a flight:</h2>
+
+<%= form_with method: 'get' do %>
+  <div>
+    <%= label_tag(:departure_airport, 'Departure airport:') %>
+    <%= select_tag(:departure_airport, options_for_select(@departure_airport_options)) %>
+  </div>
+  <div>
+    <%= label_tag(:arrival_airport, 'Arrival airport:') %>
+    <%= select_tag(:arrival_airport, options_for_select(@arrival_airport_options)) %>
+  </div>
+  <div>
+    <%= label_tag(:date, 'Date of flight:') %>
+    <%= select_tag(:date, options_for_select(@date_options)) %>
+  </div>
+  <div>
+    <%= label_tag(:num_of_passengers, 'Number of passengers:') %>
+    <%= select_tag(:num_of_passengers, options_for_select([1,2,3,4])) %>
+  </div>
+  <div><%= submit_tag('Search') %></div>
+<% end %>
