--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -28,14 +28,14 @@
   <p>...No results found...</p>
 <% else %>
   <h3>Available flights:</h3>
-  <h4>From: <%= params['flight_data']['departure_airport'] %>, To: <%= params['flight_data']['arrival_airport'] %>, Date: <%= params['flight_data']['date'] %>, Number of passengers: <%= params['flight_data']['num_of_passengers'] %>:</h4>
+  <h4>From: <%= @flight_params['flight_data']['departure_airport'] %>, To: <%= @flight_params['flight_data']['arrival_airport'] %>, Date: <%= @flight_params['flight_data']['date'] %>, Number of passengers: <%= @flight_params['flight_data']['num_of_passengers'] %>:</h4>
   <%= form_with url: '/bookings/new', method: 'get' do %>
     <ul>
     <% @matching_flights.each do |f| %>
       <li><%= radio_button_tag(:chosen_flight_id, f.id) %>Time of departure: <%= f.date.strftime("%k:%M") %>, Duration: <%= f.duration_in_hours %>hr</li>
     <% end %>
     </ul>
-    <%= hidden_field_tag :passengers_num, params['flight_data']['num_of_passengers'] %>
+    <%= hidden_field_tag :passengers_num, @flight_params['flight_data']['num_of_passengers'] %>
     <div><%= submit_tag('Submit') %></div>
   <% end %>
 <% end %>
